@@ -1,3 +1,7 @@
+1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>
+
+	* mel.el (mel-b-builtin): New variable.
+
 1998-11-10  Tanaka Akira  <akr@jaist.ac.jp>
 
 	* FLIM-ELS: require 'pccl.
